--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,45 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
+  - slug: RJ-2019-001
+    title: 'atable: Create Tables for Clinical Trial Reports'
+    bibtitle: 'atable: Create Tables for Clinical Trial Reports'
+    author: Armin Ströbel
+    bibauthor: Armin Ströbel
+    abstract: '  Abstract Examining distributions of variables is the first step in
+      the analysis of a clinical trial before            more specific modelling can
+      begin. Reporting these results to stakeholders of the trial is an essential            part
+      of a statistician’s work. The atable package facilitates these steps by offering
+      easy-to-use but still            flexible functions.'
+    acknowledged: '2018-10-08'
+    online: '2019-07-24'
+    CRANpkgs:
+    - multgee
+    - Hmisc
+    - knitr
+    - xtable
+    - flextable
+    - settings
+    - survival
+    - furniture
+    - tableone
+    - stargazer
+    - DescTools
+    - margrittr
+    - dplyr
+    CTV_rev:
+    - ReproducibleResearch
+    - SocialSciences
+    - ClinicalTrials
+    - Econometrics
+    - MissingData
+    - Bayesian
+    - ModelDeployment
+    - Multivariate
+    - OfficialStatistics
+    - Survival
+    suppl: 2 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -16222,3 +16261,4 @@ issues:
     pages:
     - 588
     - 590
+
