--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,352 @@ markdown: kramdown
 issues:
 - issue: accepted
   articles:
+  - slug: RJ-2019-001
+    title: Using Web Services to Work with Geodata in R
+    bibtitle: Using Web Services to Work with Geodata in R
+    author: Jan-Philipp Kolb
+    bibauthor: Jan-Philipp Kolb
+    abstract: '  Abstract Through collaborative mapping, a massive amount of data
+      is accessible. Many individuals            contribute information each day.
+      The growing amount of geodata is gathered by volunteers or obtained            via
+      crowd-sourcing. One outstanding example of this is the OpenStreetMap (OSM) Project
+      which            provides access to big data in geography. Another online mapping
+      service that enables the integration            of geodata into the analysis
+      is Google Maps. The expanding content and the availability of geographic            information
+      radically changes the perspective on geodata (Chilton 2009). Recently many application            programming
+      interfaces (APIs) have been built on OSM and Google Maps. That leads to a point
+      where            it is possible to access sections of geographical information
+      without the usage of a complex database            solution, especially if one
+      only requires a small data section for a visualization.                 First
+      tools for spatial analysis have been included in the R language very early (Bivand
+      and            Gebhardt, 2000) and this development will continue to accelerate,
+      underpinning a continual change.            Notably, in recent years many tools
+      have been developed to enable the usage of R as a geographic            information
+      system (GIS). With a GIS it is possible to process spatial data. QuantumGIS
+      (QGIS) is a            free software solution for these tasks, and a user interface
+      is available for this purpose. R is, therefore,            an alternative to
+      geographic information systems like QGIS (QGIS Development Team 2009). Besides,            add-ins
+      for QGIS and R-packages (RQGIS) are available, that enables the combination
+      of R and QGIS            (Muenchow and Schratz 2017). It is the target of this
+      article to present some of the most important            R-functionalities to
+      download and process geodata from OSM and the Google Maps API. The focus of            this
+      paper is on functions that enable the natural usage of these APIs.'
+    acknowledged: '2017-10-23'
+    online: '2019-07-30'
+    CRANpkgs:
+    - osmdata
+    - OpenStreetMap
+    - ggplot2
+    - ggmap
+    - RgoogleMaps
+    - leaflet
+    - magrittr
+    - tmap
+    - mapview
+    - mapdeck
+    - lawn
+    - googleway
+    - RDSTK
+    - RJSONIO
+    - jsonlite
+    - tmaptools
+    - sf
+    - OpenStreeetMap
+    - mapmisc
+    - opencage
+    - curl
+    - XML
+    - osmplotr
+    - sp
+    - igraph
+    CTV_rev:
+    - Spatial
+    - WebTechnologies
+    - Graphics
+    - SpatioTemporal
+    - gR
+    - OfficialStatistics
+    - Optimization
+    - Phylogenetics
+    - TeachingStatistics
+    suppl: 1.7 Kb
+    landing: '2019'
+  - slug: RJ-2019-002
+    title: Connecting R with D3 for dynamic graphics, to explore multivariate data
+      with tours
+    bibtitle: |-
+      Connecting R with D3 for dynamic graphics, to explore
+                multivariate data with tours
+    author:
+    - Michael Kipp
+    - Ursula Laa
+    - Dianne Cook
+    bibauthor: Michael Kipp and Ursula Laa and Dianne Cook
+    abstract: '  Abstract The tourr package in R has several algorithms and displays
+      for showing multivariate data as            a sequence of low-dimensional projections.
+      It can display as a movie but has no capacity for interaction,            such
+      as stop/go, change tour type, drop/add variables. The tourrGui package provides
+      these sorts            of controls, but the interface is programmed with the
+      dated RGtk2 package. This work explores            using custom messages to
+      pass data from R to D3 for viewing, using the Shiny framework. This is an            approach
+      that can be generally used for creating all sorts of interactive graphics.'
+    acknowledged: '2018-04-04'
+    online: '2019-07-30'
+    CRANpkgs:
+    - tourr
+    - tourrGui
+    - RGtk2
+    CTV_rev: Graphics
+    landing: '2019'
+  - slug: RJ-2019-003
+    title: 'dr4pl: A Stable Convergence Algorithm for the 4 Parameter Logistic Model'
+    bibtitle: |-
+      dr4pl: A Stable Convergence Algorithm for the 4 Parameter
+                Logistic Model
+    author:
+    - Hyowon An
+    - Justin T. Landis
+    - Aubrey G. Bailey
+    - James S. Marron
+    - Dirk P. Dittmer
+    bibauthor: |-
+      Hyowon An and Justin T. Landis and Aubrey G. Bailey and
+                James S. Marron and Dirk P. Dittmer
+    abstract: '  Abstract The 4 Parameter Logistic (4PL) model has been recognized
+      as a major tool to analyze the            relationship between doses and responses
+      in pharmacological experiments. A main strength of this            model is
+      that each parameter contributes an intuitive meaning enhancing interpretability
+      of a fitted            model. However, implementing the 4PL model using conventional
+      statistical software often encounters            numerical errors. This paper
+      highlights the issue of convergence failure and presents several causes            with
+      solutions. These causes include outliers and a non-logistic data shape, so useful
+      remedies such            as robust estimation, outlier diagnostics and constrained
+      optimization are proposed. These features            are implemented in a new
+      R package dr4pl (Dose-Response analysis using the 4 Parameter Logistic            model)
+      whose code examples are presented as a separate section. Our R package dr4pl
+      is shown to            work well for data sets where the traditional dose-response
+      modelling packages drc and nplr fail.'
+    acknowledged: '2018-04-04'
+    online: '2019-07-30'
+    CRANpkgs:
+    - dr4pl
+    - drc
+    - nplr
+    CTV_rev: ChemPhys
+    suppl: 4.1 Kb
+    landing: '2019'
+  - slug: RJ-2019-004
+    title: 'Time Series Forecasting with KNN in R: the tsfknn Package'
+    bibtitle: 'Time Series Forecasting with KNN in R: the tsfknn Package'
+    author:
+    - Francisco Martínez
+    - María P. Frías
+    - Francisco Charte
+    - Antonio J. Rivera
+    bibauthor: |-
+      Francisco Martínez and María P. Frías and Francisco Charte
+                and Antonio J. Rivera
+    abstract: '  Abstract In this paper the tsfknn package for time series forecasting
+      using k-nearest neighbor regres           sion is described. This package allows
+      users to specify a KNN model and to generate its forecasts.            The user
+      can choose among different multi-step ahead strategies and among different functions
+      to            aggregate the targets of the nearest neighbors. It is also possible
+      to assess the forecast accuracy of the            KNN model.'
+    acknowledged: '2018-05-29'
+    online: '2019-07-30'
+    CRANpkgs:
+    - forecast
+    - caret
+    - nnfor
+    - tsfknn
+    - forecastHybrid
+    - GMDH
+    - NTS
+    - tsDyn
+    - nnet
+    - neuralnet
+    CTV_rev:
+    - TimeSeries
+    - Econometrics
+    - Finance
+    - MachineLearning
+    - Environmetrics
+    - HighPerformanceComputing
+    - MissingData
+    - Multivariate
+    - SocialSciences
+    suppl: 718 bytes
+    landing: '2019'
+  - slug: RJ-2019-005
+    title: 'rollmatch: An R Package for Rolling Entry Matching'
+    bibtitle: 'rollmatch: An R Package for Rolling Entry Matching'
+    author:
+    - Kasey Jones
+    - Rob Chew
+    - Allison Witman
+    - Yiyan Liu
+    bibauthor: Kasey Jones and Rob Chew and Allison Witman and Yiyan Liu
+    abstract: '  Abstract The gold standard of experimental research is the randomized
+      control trial. However,            interventions are often implemented without
+      a randomized control group for practical or ethical            reasons. Propensity
+      score matching (PSM) is a popular method for minimizing the effects of a            randomized
+      experiment from observational data by matching members of a treatment group
+      to similar            candidates that did not receive the intervention. Traditional
+      PSM is not designed for studies that enroll            participants on a rolling
+      basis and does not provide a solution for interventions in which the baseline            and
+      intervention period are undefined in the comparison group. Rolling Entry Matching
+      (REM) is a            new matching method that addresses both issues. REM selects
+      comparison members who are similar            to intervention members with respect
+      to both static (e.g., race) and dynamic (e.g., health conditions)            characteristics.
+      This paper will discuss the key components of REM and introduce the rollmatch
+      R            package.'
+    acknowledged: '2018-05-29'
+    online: '2019-07-30'
+    CRANpkgs:
+    - rollmatch
+    - CBPS
+    - ipw
+    - MatchIt
+    - Matching
+    - optmatch
+    CTV_rev:
+    - SocialSciences
+    - HighPerformanceComputing
+    - MissingData
+    - OfficialStatistics
+    - Optimization
+    suppl: 1.1 Kb
+    landing: '2019'
+  - slug: RJ-2019-006
+    title: 'orthoDr: Semiparametric Dimension Reduction via Orthogonality Constrained
+      Optimization'
+    bibtitle: |-
+      orthoDr: Semiparametric Dimension Reduction via
+                Orthogonality Constrained Optimization
+    author:
+    - Ruoqing Zhu
+    - Jiyang Zhang
+    - Ruilin Zhao
+    - Peng Xu
+    - Wenzhuo Zhou
+    - Xin Zhang
+    bibauthor: |-
+      Ruoqing Zhu and Jiyang Zhang and Ruilin Zhao and Peng Xu and
+                Wenzhuo Zhou and Xin Zhang
+    abstract: '  Abstract orthoDr is a package in R that solves dimension reduction
+      problems using orthogonality            constrained optimization approach. The
+      package serves as a unified framework for many regression            and survival
+      analysis dimension reduction models that utilize semiparametric estimating equations.            The
+      main computational machinery of orthoDr is a first-order algorithm developed
+      by Wen and            Yin (2012) for optimization within the Stiefel manifold.
+      We implement the algorithm through Rcpp            and OpenMP for fast computation.
+      In addition, we developed a general-purpose solver for such            constrained
+      problems with user-specified objective functions, which works as a drop-in version
+      of            optim(). The package also serves as a platform for future methodology
+      developments along this line            of work.'
+    acknowledged: []
+    online: '2019-07-30'
+    CRANpkgs:
+    - orthoDr
+    - Rcpp
+    - RcppArmadillo
+    - ManifoldOpthm
+    CTV_rev:
+    - NumericalMathematics
+    - HighPerformanceComputing
+    suppl: 14.2 Kb
+    landing: '2019'
+  - slug: RJ-2019-007
+    title: 'Modeling regimes with extremes: the bayesdfa package for identifying and
+      forecasting common trends and anomalies in multivariate time-series data'
+    bibtitle: |-
+      Modeling regimes with extremes: the bayesdfa package for
+                identifying and forecasting common trends and anomalies in
+                multivariate time-series data
+    author:
+    - Eric J. Ward
+    - Sean C. Anderson
+    - Luis A. Damiano
+    - Mary E. Hunsicker
+    - Michael A. Litzow
+    bibauthor: |-
+      Eric J. Ward and Sean C. Anderson and Luis A. Damiano and
+                Mary E. Hunsicker and Michael A. Litzow
+    abstract: '  Abstract The bayesdfa package provides a flexible Bayesian modeling
+      framework for applying dy           namic factor analysis (DFA) to multivariate
+      time-series data as a dimension reduction tool. The core            estimation
+      is done with the Stan probabilistic programming language. In addition to being
+      one of the            few Bayesian implementations of DFA, novel features of
+      this model include (1) optionally modeling            latent process deviations
+      as drawn from a Student-t distribution to better model extremes, and (2)            optionally
+      including autoregressive and moving-average components in the latent trends.
+      Besides            estimation, we provide a series of plotting functions to
+      visualize trends, loadings, and model pre           dicted values. A secondary
+      analysis for some applications is to identify regimes in latent trends. We            provide
+      a flexible Bayesian implementation of a Hidden Markov Model — also written with
+      Stan — to            characterize regime shifts in latent processes. We provide
+      simulation testing and details on parameter            sensitivities in supplementary
+      information.'
+    acknowledged: '2018-10-08'
+    online: '2019-07-30'
+    CRANpkgs:
+    - dlm
+    - KFAS
+    - MARSS
+    - tsfa
+    - rstan
+    - heavy
+    - bsts
+    - stochvol
+    - loo
+    - depmixS4
+    - HMM
+    - msm
+    CTV_rev:
+    - TimeSeries
+    - Bayesian
+    - Finance
+    - Cluster
+    - Distributions
+    - Econometrics
+    - Multivariate
+    - Survival
+    landing: '2019'
+  - slug: RJ-2019-008
+    title: Optimization Routines for Enforcing One-to-One Matches in Record Linkage
+      Problems
+    bibtitle: |-
+      Optimization Routines for Enforcing One-to-One Matches in
+                Record Linkage Problems
+    author:
+    - Diego Moretti
+    - Luca Valentino
+    - Tiziana Tuoto
+    bibauthor: Diego Moretti and Luca Valentino and Tiziana Tuoto
+    abstract: '  Abstract Record linkage aims at quickly and accurately identifying
+      if two records represent the same            real world entity. In many applications,
+      we are interested in restricting the linkage results to “1 to 1”            links,
+      that is a single record does not appear more than once in the output. This can
+      be dealt with the            transport algorithm. The optimization problem,
+      however, grows quadratically in the size of the input,            quickly becoming
+      untreatable for cases with a few thousand records. This paper compares different            solutions,
+      provided by some R packages for linear programming solvers. The comparison is
+      done            in terms of memory usage and execution time. The aim is to overcome
+      the current implementation            in the toolkit RELAIS, specifically developed
+      for record linkage problems. The results highlight            improvements beyond
+      expectations. In fact the tested solutions allow successfully executing the
+      “1 to            1” reduction for large size datasets up to the largest sample
+      surveys at National Statistical Institutes.'
+    acknowledged: '2018-10-26'
+    online: '2019-07-30'
+    CRANpkgs:
+    - lpSolve
+    - Rglpk
+    - ROI.plugin.clp
+    - intpoint
+    - slam
+    CTV_rev: Optimization
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
@@ -519,62 +865,6 @@ issues:
     - sos
     - sos
     CTV_rev:
-<<<<<<< HEAD
-    - Econometrics
-    - Finance
-    - SocialSciences
-    - Distributions
-    - Environmetrics
-    - Multivariate
-    - NumericalMathematics
-    - Psychometrics
-    - Robust
-    - TimeSeries
-    suppl: 1.2 Kb
-    landing: '2018'
-  - slug: RJ-2019-001
-    title: 'atable: Create Tables for Clinical Trial Reports'
-    bibtitle: 'atable: Create Tables for Clinical Trial Reports'
-    author: Armin Ströbel
-    bibauthor: Armin Ströbel
-    abstract: '  Abstract Examining distributions of variables is the first step in
-      the analysis of a clinical trial before            more specific modelling can
-      begin. Reporting these results to stakeholders of the trial is an essential            part
-      of a statistician’s work. The atable package facilitates these steps by offering
-      easy-to-use but still            flexible functions.'
-    acknowledged: '2018-10-08'
-    online: '2019-07-22'
-    CRANpkgs:
-    - multgee
-    - Hmisc
-    - knitr
-    - xtable
-    - flextable
-    - settings
-    - survival
-    - furniture
-    - tableone
-    - stargazer
-    - DescTools
-    - margrittr
-    - dplyr
-    CTV_rev:
-    - ReproducibleResearch
-    - SocialSciences
-    - ClinicalTrials
-    - Econometrics
-    - MissingData
-    - Bayesian
-    - ModelDeployment
-    - Multivariate
-    - OfficialStatistics
-    - Survival
-    suppl: 2 Kb
-    landing: '2019'
-- issue: 2009-1
-  year: 2009
-  volume: 1
-=======
     - DifferentialEquations
     - Pharmacokinetics
   - slug: Murdoch+Urbanek
@@ -610,7 +900,6 @@ issues:
 - issue: 2010-1
   volume: 2
   year: 2010
->>>>>>> 80694f3b7d92cf135ddc1b85e4320b9ea1e1859a
   num: 1
   month: June
   bibmonth: jun
@@ -16279,3 +16568,4 @@ issues:
     pages:
     - 588
     - 590
+
