for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -348,6 +348,33 @@ issues:
     - slam
     CTV_rev: Optimization
     landing: '2019'
+  - slug: RJ-2019-009
+    title: 'mixedsde: A Package to Fit Mixed Stochastic Differential Equations'
+    bibtitle: |-
+      mixedsde: A Package to Fit Mixed Stochastic Differential
+                Equations
+    author:
+    - Charlotte Dion
+    - Simone Hermann
+    - Adeline Samson
+    bibauthor: Charlotte Dion and Simone Hermann and Adeline Samson
+    abstract: '  Abstract Stochastic differential equations (SDEs) are useful to model
+      continuous stochastic processes.            When (independent) repeated temporal
+      data are available, variability between the trajectories can be            modeled
+      by introducing random effects in the drift of the SDEs. These models are useful
+      to analyze            neuronal data, crack length data, pharmacokinetics, financial
+      data, to cite some applications among            other. The R package focuses
+      on the estimation of SDEs with linear random effects in the drift. The goal            is
+      to estimate the common density of the random effects from repeated discrete
+      observations of the            SDE. The package mixedsde proposes three estimation
+      methods: a Bayesian parametric, a frequentist            parametric and a frequentist
+      nonparametric method. The three procedures are described as well as the            main
+      functions of the package. Illustrations are presented on simulated and real
+      data.'
+    acknowledged: '2017-08-11'
+    online: '2019-08-15'
+    suppl: 3.3 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
