for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -410,6 +410,221 @@ issues:
     - TeachingStatistics
     suppl: 1.8 Kb
     landing: '2019'
+  - slug: RJ-2019-011
+    title: 'RobustGaSP: Robust Gaussian Stochastic Process Emulation in R'
+    bibtitle: |-
+      RobustGaSP: Robust Gaussian Stochastic Process Emulation in
+                R
+    author:
+    - using a different correlation and/or trend function
+    - another prior distribution
+    - or by adding a            function
+    - an objective prior for the parameters. Users are allowed to specify them
+    - for example
+    - '           estimation. It provides a default method with regard to a specific
+      correlation function'
+    - a mean/trend                 The RobustGaSP package (Gu et al. (2016)) for R
+      builds a GaSP emulator with robust parameter            methodology            DiceKriging
+      package in these comparisons
+    - because it is a state-of-the-art implementation of the MLE            more accurate
+      in out-of-sample predictions than previous packages based on the MLE. We use
+      the            zero. This motivates the RobustGaSP package; examples also indicate
+      that the package results in            is shown to be zero at the two problematic
+      cases–when the correlation is nearly equal to one or to            posterior
+      modes with the robust parameterization are mathematically stable
+    - as the posterior density            tantly
+    - that some parameterizations which are in common use should clearly be avoided.
+      Marginal            found that certain parameterizations result in more robust
+      estimators than others
+    - and
+    - more impor-                 In Gu (2016)
+    - marginal posterior modes based on several objective priors are studied. It has
+      been            this is not an appealing fix to the numerical problems.            Predictions
+      are
+    - however
+    - often quite sensitive to the choice of bound
+    - which is essentially arbitrary
+    - so            function are typically implemented to overcome the numerical problems
+      with the MLE estimates.            (2002))
+    - fields (Nychka et al. (2016)). In these packages
+    - bounds on the parameters in the correlation            et al. (2012))
+    - GPfit (MacDonald et al. (2015))
+    - mleGP (Dancik (2013))
+    - spatial (Venables
+    - Ripley            project.org/) which implement the GaSP model based on the
+      MLE
+    - including DiceKriging (Roustant                 There are several packages on
+      the Comprehensive R Archive Network (CRAN
+    - https://CRAN.R-            Challenor (2012)))
+    - while the latter problem happens more often
+    - has no easy fix.            the covariance matrix (this can partially be addressed
+      by adding a small nugget (Andrianakis
+    - '           are estimated to be close to one or to zero. The former case causes
+      a near singularity when inverting            et al. (2018))'
+    - the GaSP emulator is unstable when the correlation between any two different
+      inputs            estimation (MLE)
+    - 'often produce unstable results leading to inferior prediction. As shown in
+      (Gu           '
+    - O’Hagan (2001)). Standard methods of estimating these parameters
+    - such as maximum likelihood            relatively easy to deal with
+    - estimation of parameters in the correlation functions is difficult (Kennedy            estimates
+      in the GaSP model. Although the mean
+    - variance parameters in the GaSP model are            The prediction accuracy
+      of the emulator often depends strongly on the quality of the parameter            (Sacks
+      et al. (1989); Bayarri et al. (2007); Paulo et al. (2012); Palomo et al. (2015);
+      Gu
+    - Berger (2016)).            A GaSP emulator is a fast surrogate model used to
+      approximate the outcomes of a computer model            Introduction            out-of-sample
+      prediction.            noise terms. Examples are studied herein to highlight
+      the performance of the package in terms of            but also allows numerous
+      user specifications
+    - such as the capability of specifying trend functions
+    - '           outputs on'
+    - for example
+    - spatial-temporal coordinates. The package can be operated in a default mode
+    - '           (PP GaSP) emulator (Gu'
+    - Berger (2016)) for the scenario where the computer model has multiple            computational
+      cost. The package also implements the parallel partial Gaussian stochastic process            variability
+      of a function) can be identified from the marginal posterior mode estimation
+      at no extra            performance of the emulator. In addition
+    - inert inputs (inputs that almost have no effect on the            are provided
+      therein to explain why robust parameter estimation can greatly improve predictive            meets
+      the robust parameter estimation criteria was discussed in Gu et al. (2018);
+      mathematical reasons            posterior mode estimator
+    - for special priors
+    - parameterizations. This estimation method that            standard estimates
+    - e.g.
+    - the maximum likelihood estimator. In this package
+    - we implement a marginal            a challenging task. No closed-form estimator
+      is available
+    - many numerical problems arise with            tationally intensive computer
+      models. However
+    - estimation of parameters in the GaSP emulator is            Abstract Gaussian
+      stochastic process (GaSP) emulation is a powerful tool for approximating compu-            Mengyang
+      Gu
+    - Jesús Palomo
+    - James O. Berger
+    bibauthor: |-
+      using a different correlation and/or trend function and
+                another prior distribution and or by adding a function
+                and an objective prior for the parameters. Users are
+                allowed to specify them and for example and estimation.
+                It provides a default method with regard to a specific
+                correlation function and a mean/trend The RobustGaSP
+                package (Gu et al. (2016)) for R builds a GaSP emulator
+                with robust parameter methodology DiceKriging package in
+                these comparisons and because it is a state-of-the-art
+                implementation of the MLE more accurate in out-of-sample
+                predictions than previous packages based on the MLE. We use
+                the zero. This motivates the RobustGaSP package; examples
+                also indicate that the package results in is shown to be
+                zero at the two problematic cases–when the correlation is
+                nearly equal to one or to posterior modes with the robust
+                parameterization are mathematically stable and as the
+                posterior density tantly and that some parameterizations
+                which are in common use should clearly be avoided. Marginal
+                found that certain parameterizations result in more robust
+                estimators than others and and and more impor- In Gu (2016)
+                and marginal posterior modes based on several objective
+                priors are studied. It has been this is not an appealing
+                fix to the numerical problems. Predictions are and however
+                and often quite sensitive to the choice of bound and which
+                is essentially arbitrary and so function are typically
+                implemented to overcome the numerical problems with the
+                MLE estimates. (2002)) and fields (Nychka et al. (2016)).
+                In these packages and bounds on the parameters in the
+                correlation et al. (2012)) and GPfit (MacDonald et al.
+                (2015)) and mleGP (Dancik (2013)) and spatial (Venables and
+                Ripley project.org/) which implement the GaSP model based
+                on the MLE and including DiceKriging (Roustant There are
+                several packages on the Comprehensive R Archive Network
+                (CRAN and https://CRAN.R- Challenor (2012))) and while
+                the latter problem happens more often and has no easy fix.
+                the covariance matrix (this can partially be addressed by
+                adding a small nugget (Andrianakis and are estimated to
+                be close to one or to zero. The former case causes a near
+                singularity when inverting et al. (2018)) and the GaSP
+                emulator is unstable when the correlation between any two
+                different inputs estimation (MLE) and often produce unstable
+                results leading to inferior prediction. As shown in (Gu
+                and O’Hagan (2001)). Standard methods of estimating these
+                parameters and such as maximum likelihood relatively easy
+                to deal with and estimation of parameters in the correlation
+                functions is difficult (Kennedy estimates in the GaSP model.
+                Although the mean and variance parameters in the GaSP model
+                are The prediction accuracy of the emulator often depends
+                strongly on the quality of the parameter (Sacks et al.
+                (1989); Bayarri et al. (2007); Paulo et al. (2012); Palomo
+                et al. (2015); Gu and Berger (2016)). A GaSP emulator is
+                a fast surrogate model used to approximate the outcomes
+                of a computer model Introduction out-of-sample prediction.
+                noise terms. Examples are studied herein to highlight the
+                performance of the package in terms of but also allows
+                numerous user specifications and such as the capability of
+                specifying trend functions and outputs on and for example
+                and spatial-temporal coordinates. The package can be
+                operated in a default mode and (PP GaSP) emulator (Gu and
+                Berger (2016)) for the scenario where the computer model has
+                multiple computational cost. The package also implements the
+                parallel partial Gaussian stochastic process variability of
+                a function) can be identified from the marginal posterior
+                mode estimation at no extra performance of the emulator. In
+                addition and inert inputs (inputs that almost have no effect
+                on the are provided therein to explain why robust parameter
+                estimation can greatly improve predictive meets the robust
+                parameter estimation criteria was discussed in Gu et al.
+                (2018); mathematical reasons posterior mode estimator and
+                for special priors and parameterizations. This estimation
+                method that standard estimates and e.g. and the maximum
+                likelihood estimator. In this package and we implement a
+                marginal a challenging task. No closed-form estimator is
+                available and many numerical problems arise with tationally
+                intensive computer models. However and estimation of
+                parameters in the GaSP emulator is Abstract Gaussian
+                stochastic process (GaSP) emulation is a powerful tool for
+                approximating compu- Mengyang Gu and Jesús Palomo and James
+                O. Berger
+    abstract: '  Abstract Gaussian stochastic process (GaSP) emulation is a powerful
+      tool for approximating compu           tationally intensive computer models.
+      However, estimation of parameters in the GaSP emulator is            a challenging
+      task. No closed-form estimator is available and many numerical problems arise
+      with            standard estimates, e.g., the maximum likelihood estimator.
+      In this package, we implement a marginal            posterior mode estimator,
+      for special priors and parameterizations. This estimation method that            meets
+      the robust parameter estimation criteria was discussed in Gu et al. (2018);
+      mathematical reasons            are provided therein to explain why robust parameter
+      estimation can greatly improve predictive            performance of the emulator.
+      In addition, inert inputs (inputs that almost have no effect on the            variability
+      of a function) can be identified from the marginal posterior mode estimation
+      at no extra            computational cost. The package also implements the parallel
+      partial Gaussian stochastic process            (PP GaSP) emulator (Gu and Berger
+      (2016)) for the scenario where the computer model has multiple            outputs
+      on, for example, spatial-temporal coordinates. The package can be operated in
+      a default mode,            but also allows numerous user specifications, such
+      as the capability of specifying trend functions and            noise terms.
+      Examples are studied herein to highlight the performance of the package in terms
+      of            out-of-sample prediction.'
+    acknowledged: []
+    online: '2019-08-15'
+    CRANpkgs:
+    - DiceKriging
+    - GPfit
+    - mleGP
+    - spatial
+    - fields
+    - RobustGaSP
+    - lhs
+    - sensitivity
+    - nloptr
+    CTV_rev:
+    - ExperimentalDesign
+    - Spatial
+    - Distributions
+    - Environmetrics
+    - Optimization
+    - SocialSciences
+    suppl: 4.1 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
