--- a/_config.yml
+++ b/_config.yml
@@ -3,74 +3,43 @@ issues:
 - issue: accepted
   articles:
   - slug: RJ-2019-001
-    title: Using Web Services to Work with Geodata in R
-    bibtitle: Using Web Services to Work with Geodata in R
-    author: Jan-Philipp Kolb
-    bibauthor: Jan-Philipp Kolb
-    abstract: '  Abstract Through collaborative mapping, a massive amount of data
-      is accessible. Many individuals            contribute information each day.
-      The growing amount of geodata is gathered by volunteers or obtained            via
-      crowd-sourcing. One outstanding example of this is the OpenStreetMap (OSM) Project
-      which            provides access to big data in geography. Another online mapping
-      service that enables the integration            of geodata into the analysis
-      is Google Maps. The expanding content and the availability of geographic            information
-      radically changes the perspective on geodata (Chilton 2009). Recently many application            programming
-      interfaces (APIs) have been built on OSM and Google Maps. That leads to a point
-      where            it is possible to access sections of geographical information
-      without the usage of a complex database            solution, especially if one
-      only requires a small data section for a visualization.                 First
-      tools for spatial analysis have been included in the R language very early (Bivand
-      and            Gebhardt, 2000) and this development will continue to accelerate,
-      underpinning a continual change.            Notably, in recent years many tools
-      have been developed to enable the usage of R as a geographic            information
-      system (GIS). With a GIS it is possible to process spatial data. QuantumGIS
-      (QGIS) is a            free software solution for these tasks, and a user interface
-      is available for this purpose. R is, therefore,            an alternative to
-      geographic information systems like QGIS (QGIS Development Team 2009). Besides,            add-ins
-      for QGIS and R-packages (RQGIS) are available, that enables the combination
-      of R and QGIS            (Muenchow and Schratz 2017). It is the target of this
-      article to present some of the most important            R-functionalities to
-      download and process geodata from OSM and the Google Maps API. The focus of            this
-      paper is on functions that enable the natural usage of these APIs.'
-    acknowledged: '2017-10-23'
-    online: '2019-07-30'
+    title: 'atable: Create Tables for Clinical Trial Reports'
+    bibtitle: 'atable: Create Tables for Clinical Trial Reports'
+    author: Armin Ströbel
+    bibauthor: Armin Ströbel
+    abstract: '  Abstract Examining distributions of variables is the first step in
+      the analysis of a clinical trial before            more specific modelling can
+      begin. Reporting these results to stakeholders of the trial is an essential            part
+      of a statistician’s work. The atable package facilitates these steps by offering
+      easy-to-use but still            flexible functions.'
+    acknowledged: '2018-10-08'
+    online: '2019-07-22'
     CRANpkgs:
-    - osmdata
-    - OpenStreetMap
-    - ggplot2
-    - ggmap
-    - RgoogleMaps
-    - leaflet
-    - magrittr
-    - tmap
-    - mapview
-    - mapdeck
-    - lawn
-    - googleway
-    - RDSTK
-    - RJSONIO
-    - jsonlite
-    - tmaptools
-    - sf
-    - OpenStreeetMap
-    - mapmisc
-    - opencage
-    - curl
-    - XML
-    - osmplotr
-    - sp
-    - igraph
+    - multgee
+    - Hmisc
+    - knitr
+    - xtable
+    - flextable
+    - settings
+    - survival
+    - furniture
+    - tableone
+    - stargazer
+    - DescTools
+    - margrittr
+    - dplyr
     CTV_rev:
-    - Spatial
-    - WebTechnologies
-    - Graphics
-    - SpatioTemporal
-    - gR
+    - ReproducibleResearch
+    - SocialSciences
+    - ClinicalTrials
+    - Econometrics
+    - MissingData
+    - Bayesian
+    - ModelDeployment
+    - Multivariate
     - OfficialStatistics
-    - Optimization
-    - Phylogenetics
-    - TeachingStatistics
-    suppl: 1.7 Kb
+    - Survival
+    suppl: 2 Kb
     landing: '2019'
   - slug: RJ-2019-002
     title: Connecting R with D3 for dynamic graphics, to explore multivariate data
