--- a/_config.yml
+++ b/_config.yml
@@ -594,6 +594,65 @@ issues:
     - SocialSciences
     suppl: 4.1 Kb
     landing: '2019'
+  - slug: RJ-2019-012
+    title: 'What''s for dynr: A Package for Linear and Nonlinear Dynamic Modeling
+      in R'
+    bibtitle: |-
+      What's for dynr: A Package for Linear and Nonlinear Dynamic
+                Modeling in R
+    author:
+    - 'Lu Ou+ '
+    - 'Michael D. Hunter+ '
+    - Sy-Miin Chow
+    bibauthor: Lu Ou+ and Michael D. Hunter+ and Sy-Miin Chow
+    abstract: '  Abstract Intensive longitudinal data in the behavioral sciences are
+      often noisy, multivariate in na           ture, and may involve multiple units
+      undergoing regime switches by showing discontinuities in           terspersed
+      with continuous dynamics. Despite increasing interest in using linear and nonlinear            differential/difference
+      equation models with regime switches, there has been a scarcity of software            packages
+      that are fast and freely accessible. We have created an R package called dynr
+      that can handle            a broad class of linear and nonlinear discreteand
+      continuous-time models, with regime-switching            properties and linear
+      Gaussian measurement functions, in C, while maintaining simple and easy-to           learn
+      model specification functions in R. We present the mathematical and computational
+      bases used            by the dynr R package, and present two illustrative examples
+      to demonstrate the unique features of            dynr.'
+    acknowledged: '2018-02-02'
+    online: '2019-08-15'
+    CRANpkgs:
+    - dynr
+    - dlm
+    - KFAS
+    - dse
+    - OpenMx
+    - ctsem
+    - depmixS4
+    - RHmm
+    - MSwM
+    - MSBVAR
+    - MSGARCH
+    - pomp
+    - stats
+    - Rcpp
+    - RcppGSL
+    - mice
+    CTVs: TimeSeries
+    CTV_rev:
+    - TimeSeries
+    - Finance
+    - MissingData
+    - Psychometrics
+    - Bayesian
+    - Cluster
+    - DifferentialEquations
+    - Environmetrics
+    - HighPerformanceComputing
+    - Multivariate
+    - NumericalMathematics
+    - OfficialStatistics
+    - SocialSciences
+    suppl: 4.2 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
