for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -653,6 +653,36 @@ issues:
     - SocialSciences
     suppl: 4.2 Kb
     landing: '2019'
+  - slug: RJ-2019-016
+    title: Identifying and Testing Recursive vs. Interdependent Links in Simultaneous
+      Equation Models via the SIRE Package
+    bibtitle: |-
+      Identifying and Testing Recursive vs. Interdependent Links
+                in Simultaneous Equation Models via the SIRE Package
+    author:
+    - Gianmarco Vacca
+    - Maria Grazia Zoia
+    bibauthor: Gianmarco Vacca and Maria Grazia Zoia
+    abstract: ' Abstract Simultaneous equation models (SEMs) are composed of relations
+      which either represent           by Gianmarco Vacca and Maria Grazia Zoia           Package           Equation
+      Models via the SIRE           Interdependent Links in Simultaneous           Identifying
+      and Testing Recursive vs. Contributed research article                                                                                         1'
+    acknowledged: '2018-10-08'
+    online: '2019-08-15'
+    CRANpkgs:
+    - SIRE
+    - igraph
+    - systemfit
+    - Rsolnp
+    CTV_rev:
+    - Optimization
+    - Econometrics
+    - gR
+    - Graphics
+    - Psychometrics
+    - Spatial
+    suppl: 1.8 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
