for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -683,6 +683,60 @@ issues:
     - Spatial
     suppl: 1.8 Kb
     landing: '2019'
+  - slug: RJ-2019-017
+    title: 'fclust: An R Package for Fuzzy Clustering'
+    bibtitle: 'fclust: An R Package for Fuzzy Clustering'
+    author:
+    - Maria Brigida Ferraro
+    - Paolo Giordani
+    - Alessio Serafini
+    bibauthor: |-
+      Maria Brigida Ferraro and Paolo Giordani and Alessio
+                Serafini
+    abstract: ' Abstract Fuzzy clustering methods discover fuzzy partitions where
+      observations can be softly assigned           to more than one cluster. The
+      package fclust is a toolbox for fuzzy clustering in the R programming           language.
+      It not only implements the widely used fuzzy k-means (FkM) algorithm, but also
+      many FkM           variants. Fuzzy cluster similarity measures, cluster validity
+      indices and cluster visualization tools           are also offered. In the current
+      version, all the functions are rewritten in the C++ language allowing           their
+      application in large-size problems. Moreover, new fuzzy relational clustering
+      algorithms for           partitioning qualitative/mixed data are provided together
+      with an improved version of the so-called           Gustafson-Kessel algorithm
+      to avoid singularity in the cluster covariance matrices. Finally, it is now           possible
+      to automatically select the number of clusters by means of the available fuzzy
+      cluster validity           indices.'
+    acknowledged: '2018-12-01'
+    online: '2019-08-15'
+    CRANpkgs:
+    - fclust
+    - cluster
+    - clue
+    - e1071
+    - skmeans
+    - vegclust
+    - ppclust
+    - Rcpp
+    - RcppArmadillo
+    - smacof
+    - MASS
+    CTV_rev:
+    - Cluster
+    - Multivariate
+    - Environmetrics
+    - NumericalMathematics
+    - Psychometrics
+    - Distributions
+    - Robust
+    - Econometrics
+    - HighPerformanceComputing
+    - MachineLearning
+    - NaturalLanguageProcessing
+    - Optimization
+    - SocialSciences
+    - TeachingStatistics
+    suppl: 2.5 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
