for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -737,6 +737,43 @@ issues:
     - TeachingStatistics
     suppl: 2.5 Kb
     landing: '2019'
+  - slug: RJ-2019-018
+    title: 'Matching with Clustered Data: the CMatching Package in R'
+    bibtitle: 'Matching with Clustered Data: the CMatching Package in R'
+    author:
+    - Massimo Cannas
+    - Bruno Arpino
+    bibauthor: Massimo Cannas and Bruno Arpino
+    abstract: '  Abstract Matching is a well known technique to balance covariates
+      distribution between treated and            control units in non-experimental
+      studies. In many fields, clustered data are a very common occurrence            in
+      the analysis of observational data and the clustering can add potentially interesting
+      information.            Matching algorithms should be adapted to properly exploit
+      the hierarchical structure. In this article we            present the CMatching
+      package implementing matching algorithms for clustered data. The package            provides
+      functions for obtaining a matched dataset along with estimates of most common
+      parameters            of interest and model-based standard errors. A propensity
+      score matching analysis, relating math            proficiency with homework
+      completion for students belonging to different schools (based on the            NELS-88
+      data), illustrates in detail the use of the algorithms.'
+    acknowledged: '2018-10-26'
+    online: '2019-08-15'
+    CRANpkgs:
+    - CMatching
+    - Matching
+    - designmatch
+    - optmatch
+    - MatchIT
+    - quickmatch
+    - multiwayvcov
+    CTV_rev:
+    - SocialSciences
+    - Econometrics
+    - ExperimentalDesign
+    - HighPerformanceComputing
+    - Optimization
+    suppl: 1.9 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
