--- a/_config.yml
+++ b/_config.yml
@@ -774,6 +774,43 @@ issues:
     - Optimization
     suppl: 1.9 Kb
     landing: '2019'
+  - slug: RJ-2019-019
+    title: 'MDFS: MultiDimensional Feature Selection in R'
+    bibtitle: 'MDFS: MultiDimensional Feature Selection in R'
+    author:
+    - Radosław Piliszek
+    - Krzysztof Mnich
+    - Szymon Migacz
+    - Paweł Tabaszewski
+    - Andrzej Sułecki
+    - Aneta            Polewko-Klim
+    - Witold Rudnicki
+    bibauthor: |-
+      Radosław Piliszek and Krzysztof Mnich and Szymon Migacz and
+                Paweł Tabaszewski and Andrzej Sułecki and Aneta Polewko-Klim
+                and Witold Rudnicki
+    abstract: '  Abstract Identification of informative variables in an information
+      system is often performed using            simple one-dimensional filtering
+      procedures that discard information about interactions between            variables.
+      Such an approach may result in removing some relevant variables from consideration.
+      Here            we present an R package MDFS (MultiDimensional Feature Selection)
+      that performs identification            of informative variables taking into
+      account synergistic interactions between multiple descriptors            and
+      the decision variable. MDFS is an implementation of an algorithm based on information
+      theory            (Mnich and Rudnicki, 2017). The computational kernel of the
+      package is implemented in C++. A            high-performance version implemented
+      in CUDA C is also available. The application of MDFS is            demonstrated
+      using the well-known Madelon dataset, in which a decision variable is generated
+      from            synergistic interactions between descriptor variables. It is
+      shown that the application of multidimen           sional analysis results in
+      better sensitivity and ranking of importance.'
+    acknowledged: '2018-12-01'
+    online: '2019-08-16'
+    CRANpkgs:
+    - MDFS
+    - Rfast
+    suppl: 1.3 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
