--- a/_config.yml
+++ b/_config.yml
@@ -811,6 +811,31 @@ issues:
     - Rfast
     suppl: 1.3 Kb
     landing: '2019'
+  - slug: RJ-2019-020
+    title: 'Nowcasting: An R Package for Predicting Economic Variables Using Dynamic
+      Factor Models'
+    bibtitle: |-
+      Nowcasting: An R Package for Predicting Economic Variables
+                Using Dynamic Factor Models
+    author:
+    - Serge de Valk
+    - Daiane de Mattos
+    - Pedro Ferreira
+    bibauthor: Serge de Valk and Daiane de Mattos and Pedro Ferreira
+    abstract: '  Abstract The nowcasting package provides the tools to make forecasts
+      of monthly or quarterly            economic variables using dynamic factor models.
+      The objective is to help the user at each step of            the forecasting
+      process, starting with the construction of a database, all the way to the interpretation            of
+      the forecasts. The dynamic factor model adopted in this package is based on
+      the articles from            Giannone et al. (2008) and Banbura et al. (2011).
+      Although there exist several other dynamic factor            model packages
+      available for R, ours provides an environment to easily forecast economic variables            and
+      interpret results.'
+    acknowledged: '2018-12-01'
+    online: '2019-08-16'
+    CRANpkgs: nowcasting
+    suppl: 1 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
