--- a/_config.yml
+++ b/_config.yml
@@ -836,6 +836,35 @@ issues:
     CRANpkgs: nowcasting
     suppl: 1 Kb
     landing: '2019'
+  - slug: RJ-2019-021
+    title: 'ConvergenceClubs: A Package for Performing the Phillips and Sul''s Club
+      Convergence Clustering Procedure'
+    bibtitle: |-
+      ConvergenceClubs: A Package for Performing the Phillips and
+                Sul's Club Convergence Clustering Procedure
+    author:
+    - Roberto Sichera
+    - Pietro Pizzuto
+    bibauthor: Roberto Sichera and Pietro Pizzuto
+    abstract: '  Abstract This paper introduces package ConvergenceClubs, which implements
+      functions to perform            the Phillips and Sul (2007, 2009) club convergence
+      clustering procedure in a simple and reproducible            manner. The approach
+      proposed by Phillips and Sul to analyse the convergence patterns of groups            of
+      economies is formulated as a nonlinear time varying factor model that allows
+      for different time            paths as well as individual heterogeneity. Unlike
+      other approaches in which economies are grouped a            priori, it also
+      allows the endogenous determination of convergence clubs. The algorithm, usage,
+      and            implementation details are discussed.'
+    acknowledged:
+    - '2018-12-06'
+    - '2018-12-07'
+    online: '2019-08-16'
+    CRANpkgs:
+    - ConvergenceClubs
+    - mFilter
+    CTV_rev: TimeSeries
+    suppl: 907 bytes
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
