--- a/_config.yml
+++ b/_config.yml
@@ -944,6 +944,51 @@ issues:
     - TeachingStatistics
     suppl: 5.3 Kb
     landing: '2019'
+  - slug: RJ-2019-023
+    title: Time-Series Clustering in R Using the dtwclust Package
+    bibtitle: Time-Series Clustering in R Using the dtwclust Package
+    author: Alexis Sardá-Espinosa
+    bibauthor: Alexis Sardá-Espinosa
+    abstract: '  Abstract Most clustering strategies have not changed considerably
+      since their initial definition. The            common improvements are either
+      related to the distance measure used to assess dissimilarity, or            the
+      function used to calculate prototypes. Time-series clustering is no exception,
+      with the Dynamic            Time Warping distance being particularly popular
+      in that context. This distance is computationally            expensive, so many
+      related optimizations have been developed over the years. Since no single            clustering
+      algorithm can be said to perform best on all datasets, different strategies
+      must be tested and            compared, so a common infrastructure can be advantageous.
+      In this manuscript, a general overview            of shape-based time-series
+      clustering is given, including many specifics related to Dynamic Time            Warping
+      and associated techniques. At the same time, a description of the dtwclust package
+      for the R            statistical software is provided, showcasing how it can
+      be used to evaluate many different time-series            clustering procedures.'
+    acknowledged: '2018-04-04'
+    online: '2019-08-16'
+    CRANpkgs:
+    - dtwclust
+    - flexclust
+    - cluster
+    - TSdist
+    - TSclust
+    - pdc
+    - dtw
+    - proxy
+    - clue
+    - foreach
+    - RcppParallel
+    - doParallel
+    CTVs: TimeSeries
+    CTV_rev:
+    - TimeSeries
+    - Cluster
+    - Multivariate
+    - HighPerformanceComputing
+    - Environmetrics
+    - Optimization
+    - Robust
+    suppl: 4.4 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
