for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -989,6 +989,55 @@ issues:
     - Robust
     suppl: 4.4 Kb
     landing: '2019'
+  - slug: RJ-2019-024
+    title: 'shadow: R Package for Geometric Shadow Calculations in an Urban Environment'
+    bibtitle: |-
+      shadow: R Package for Geometric Shadow Calculations in an
+                Urban Environment
+    author:
+    - Michael Dorman
+    - Evyatar Erell
+    - Adi Vulkan
+    - Itai Kloog
+    bibauthor: |-
+      Michael Dorman and Evyatar Erell and Adi Vulkan and Itai
+                Kloog
+    abstract: '  Abstract This paper introduces the shadow package for R. The package
+      provides functions for shadow           related calculations in the urban environment,
+      namely shadow height, shadow footprint and Sky            View Factor (SVF)
+      calculations, as well as a wrapper function to estimate solar radiation while
+      taking            shadow effects into account. All functions operate on a layer
+      of polygons with a height attribute,            also known as “extruded polygons”
+      or 2.5D vector data. Such data are associated with accuracy            limitations
+      in representing urban environments. However, unlike 3D models, polygonal layers
+      of            building outlines along with their height are abundantly available
+      and their processing does not            require specialized closed-source 3D
+      software. The present package thus brings spatio-temporal            shadow,
+      SVF and solar radiation calculation capabilities to the open-source spatial
+      analysis workflow            in R. Package functionality is demonstrated using
+      small reproducible examples for each function.            Wider potential use
+      cases include urban environment applications such as evaluation of micro-climatic            influence
+      for urban planning, studying urban climatic comfort and estimating photovoltaic
+      energy            production potential.'
+    acknowledged: '2018-05-01'
+    online: '2019-08-17'
+    CRANpkgs:
+    - insol
+    - shadow
+    - sp
+    - threejs
+    - raster
+    - rgeos
+    - maptools
+    - parallel
+    - plot3D
+    - sf
+    CTVs: Spatial
+    CTV_rev:
+    - Spatial
+    - SpatioTemporal
+    suppl: 2.3 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
