--- a/_config.yml
+++ b/_config.yml
@@ -1038,6 +1038,46 @@ issues:
     - SpatioTemporal
     suppl: 2.3 Kb
     landing: '2019'
+  - slug: RJ-2019-025
+    title: Integration of networks and pathways with StarBioTrek package
+    bibtitle: |-
+      Integration of networks and pathways with StarBioTrek
+                package
+    author:
+    - Claudia Cava
+    - Isabella Castiglioni
+    bibauthor: Claudia Cava and Isabella Castiglioni
+    abstract: '  Abstract High-throughput genomic technologies bring to light a comprehensive
+      hallmark of molecular            changes of a disease. It is increasingly evident
+      that genes are not isolated from each other and the            identification
+      of a gene signature can only partially elucidate the de-regulated biological
+      functions in a            disease. The comprehension of how groups of genes
+      (pathways) are related to each other (pathway           cross talk) could explain
+      biological mechanisms causing diseases. Biological pathways are important            tools
+      to identify gene interactions and decrease the large number of genes to be studied
+      by partitioning            them into smaller groups. Furthermore, recent scientific
+      studies have demonstrated that an integration            of pathways and networks,
+      instead of a single component of the pathway or a single network, could            lead
+      to a deeper understanding of the pathology.                StarBioTrek is an
+      R package for the integration of biological pathways and networks which            provides
+      a series of functions to support the user in their analyses. In particular,
+      it implements            algorithms to identify pathways cross-talk networks
+      and gene network drivers in pathways. It is            available as open source
+      and open development software in the Bioconductor platform.'
+    acknowledged: '2018-05-01'
+    online: '2019-08-17'
+    CRANpkgs:
+    - XGR
+    - qgraph
+    - GOplot
+    BIOpkgs:
+    - NetPathMiner
+    - ToPASeq
+    - StarBioTrek
+    - graphite
+    CTV_rev: Psychometrics
+    suppl: 1.2 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
