for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -1078,6 +1078,42 @@ issues:
     CTV_rev: Psychometrics
     suppl: 1.2 Kb
     landing: '2019'
+  - slug: RJ-2019-026
+    title: 'ciuupi: An R package for Computing Confidence Intervals that Utilize Uncertain
+      Prior Information'
+    bibtitle: |-
+      ciuupi: An R package for Computing Confidence Intervals that
+                Utilize Uncertain Prior Information
+    author:
+    - Rheanna Mainzer
+    - Paul Kabaila
+    bibauthor: Rheanna Mainzer and Paul Kabaila
+    abstract: '  Abstract We have created the R package ciuupi to compute confidence
+      intervals that utilize uncertain            prior information in linear regression.
+      Unlike post-model-selection confidence intervals, the confidence            interval
+      that utilizes uncertain prior information (CIUUPI) implemented in this package
+      has, to an            excellent approximation, coverage probability throughout
+      the parameter space that is very close to            the desired minimum coverage
+      probability. Furthermore, when the uncertain prior information is            correct,
+      the CIUUPI is, on average, shorter than the standard confidence interval constructed
+      using            the full linear regression model. In this paper we provide
+      motivating examples of scenarios where            the CIUUPI may be used. We
+      then give a detailed description of this interval and the numerical            constrained
+      optimization method implemented in R to obtain it. Lastly, using a real data
+      set as an            illustrative example, we show how to use the functions
+      in ciuupi.'
+    acknowledged: '2018-05-01'
+    online: '2019-08-17'
+    CRANpkgs:
+    - ciuupi
+    - nloptr
+    - statmod
+    CTV_rev:
+    - Distributions
+    - NumericalMathematics
+    - Optimization
+    suppl: 1 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
