for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -1114,6 +1114,47 @@ issues:
     - Optimization
     suppl: 1 Kb
     landing: '2019'
+  - slug: RJ-2019-027
+    title: 'cvcrand: A package for covariate-constrained randomization and the clustered
+      permutation test for cluster randomized trials'
+    bibtitle: |-
+      cvcrand: A package for covariate-constrained randomization
+                and the clustered permutation test for cluster randomized
+                trials
+    author:
+    - Hengshi Yu
+    - Fan Li
+    - John A. Gallis
+    - Elizabeth L. Turner
+    bibauthor: |-
+      Hengshi Yu and Fan Li and John A. Gallis and Elizabeth L.
+                Turner
+    abstract: '  Abstract The cluster randomized trial (CRT) is a randomized controlled
+      trial in which randomization            is conducted at the cluster level (e.g.
+      school or hospital) and outcomes are measured for each            individual
+      within a cluster. Often, the number of clusters available to randomize is small
+      (≤ 20), which            increases the chance of baseline covariate imbalance
+      between comparison arms. Such imbalance is            particularly problematic
+      when the covariates are predictive of the outcome because it can threaten            the
+      internal validity of the CRT. Pair-matching and stratification are two restricted
+      randomization            approaches that are frequently used to ensure balance
+      at the design stage. An alternative, less            commonly-used restricted
+      randomization approach is covariate-constrained randomization. Covariate           constrained
+      randomization quantifies baseline imbalance of cluster-level covariates using
+      a balance            metric and randomly selects a randomization scheme from
+      those with acceptable balance by the            balance metric. It is able to
+      accommodate multiple covariates, both categorical and continuous. To            facilitate
+      implementation of covariate-constrained randomization for the design of two-arm
+      parallel            CRTs, we have developed the cvcrand R package. In addition,
+      cvcrand also implements the clustered            permutation test for analyzing
+      continuous and binary outcomes collected from a CRT designed with            covariate-constrained
+      randomization. We used a real cluster randomized trial to illustrate the functions            included
+      in the package.'
+    acknowledged: '2018-05-01'
+    online: '2019-08-17'
+    CRANpkgs: cvcrand
+    suppl: 1.4 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
