for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -1155,6 +1155,65 @@ issues:
     CRANpkgs: cvcrand
     suppl: 1.4 Kb
     landing: '2019'
+  - slug: RJ-2019-028
+    title: 'jomo: A Flexible Package for Two-level Joint Modelling Multiple Imputation'
+    bibtitle: |-
+      jomo: A Flexible Package for Two-level Joint Modelling
+                Multiple Imputation
+    author:
+    - Matteo Quartagno
+    - Simon Grund
+    - James Carpenter
+    bibauthor: Matteo Quartagno and Simon Grund and James Carpenter
+    abstract: '  Abstract Multiple imputation is a tool for parameter estimation and
+      inference with partially observed            data, which is used increasingly
+      widely in medical and social research. When the data to be imputed            are
+      correlated or have a multilevel structure — repeated observations on patients,
+      school children            nested in classes within schools within educational
+      districts — the imputation model needs to include            this structure.
+      Here we introduce our joint modelling package for multiple imputation of multilevel            data,
+      jomo, which uses a multivariate normal model fitted by Markov Chain Monte Carlo
+      (MCMC).            Compared to previous packages for multilevel imputation,
+      e.g. pan, jomo adds the facility to (i) handle            and impute categorical
+      variables using a latent normal structure, (ii) impute level-2 variables, and
+      (iii)            allow for cluster-specific covariance matrices, including the
+      option to give them an inverse-Wishart            distribution at level 2. The
+      package uses C routines to speed up the computations and has been            extensively
+      validated in simulation studies both by ourselves and others.'
+    acknowledged: '2018-05-01'
+    online: '2019-08-17'
+    CRANpkgs:
+    - jomo
+    - pan
+    - norm
+    - cat
+    - mix
+    - R2MLwiN
+    - mitools
+    - mice
+    - semTools
+    - BaBooN
+    - mitml
+    - Amelia
+    - mi
+    - lavaan.survey
+    - dummies
+    - nlme
+    CTV_rev:
+    - MissingData
+    - OfficialStatistics
+    - SocialSciences
+    - Multivariate
+    - Psychometrics
+    - Bayesian
+    - ChemPhys
+    - Econometrics
+    - Environmetrics
+    - Finance
+    - Spatial
+    - SpatioTemporal
+    suppl: 1.7 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
