--- a/_config.yml
+++ b/_config.yml
@@ -1214,6 +1214,36 @@ issues:
     - SpatioTemporal
     suppl: 1.7 Kb
     landing: '2019'
+  - slug: RJ-2019-029
+    title: 'ipwErrorY: An R Package for Estimation of Average Treatment Effect with
+      Misclassified Binary Outcome'
+    bibtitle: |-
+      ipwErrorY: An R Package for Estimation of Average Treatment
+                Effect with Misclassified Binary Outcome
+    author:
+    - Di Shu
+    - Grace Y. Yi
+    bibauthor: Di Shu and Grace Y. Yi
+    abstract: '  Abstract It has been well documented that ignoring measurement error
+      may result in severely biased            inference results. In recent years,
+      there has been limited but increasing research on causal inference            with
+      measurement error. In the presence of misclassified binary outcome variable,
+      Shu and Yi (2017)            considered the inverse probability weighted estimation
+      of the average treatment effect and proposed            valid estimation methods
+      to correct for misclassification effects for various settings. To expedite the            application
+      of those methods for situations where misclassification in the binary outcome
+      variable            is a real concern, we implement correction methods proposed
+      by Shu and Yi (2017) and develop            an R package ipwErrorY for general
+      users. Simulated datasets are used to illustrate the use of the            developed
+      package.'
+    acknowledged: '2018-05-29'
+    online: '2019-08-17'
+    CRANpkgs:
+    - ipwErrorY
+    - nleqslv
+    CTV_rev: NumericalMathematics
+    suppl: 1.3 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
