for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -1244,6 +1244,36 @@ issues:
     CTV_rev: NumericalMathematics
     suppl: 1.3 Kb
     landing: '2019'
+  - slug: RJ-2019-030
+    title: 'optimParallel: An R Package Providing a Parallel Version of the L-BFGS-B
+      Optimization Method'
+    bibtitle: |-
+      optimParallel: An R Package Providing a Parallel Version of
+                the L-BFGS-B Optimization Method
+    author:
+    - Florian Gerber
+    - Reinhard Furrer
+    bibauthor: Florian Gerber and Reinhard Furrer
+    abstract: '  Abstract The R package optimParallel provides a parallel version
+      of the L-BFGS-B optimization            method of optim(). The main function
+      of the package is optimParallel(), which has the same            usage and output
+      as optim(). Using optimParallel() can significantly reduce the optimization
+      time,            especially when the evaluation time of the objective function
+      is large and no analytical gradient is            available. We introduce the
+      R package and illustrate its implementation, which takes advantage of the            lexical
+      scoping mechanism of R.'
+    acknowledged: '2018-05-29'
+    online: '2019-08-17'
+    CRANpkgs:
+    - lbfgsb3
+    - lbfgsb3c
+    - optimParallel
+    - testthat
+    - microbenchmark
+    CTVs: Optimization
+    CTV_rev: Optimization
+    suppl: 2.4 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
