--- a/_config.yml
+++ b/_config.yml
@@ -1274,6 +1274,47 @@ issues:
     CTV_rev: Optimization
     suppl: 2.4 Kb
     landing: '2019'
+  - slug: RJ-2019-031
+    title: 'swgee: An R Package for Analyzing Longitudinal Data with Response Missingness
+      and Covariate Measurement Error'
+    bibtitle: |-
+      swgee: An R Package for Analyzing Longitudinal Data with
+                Response Missingness and Covariate Measurement Error
+    author:
+    - Juan Xiong
+    - Grace Y. Yi
+    bibauthor: Juan Xiong and Grace Y. Yi
+    abstract: '  Abstract Though longitudinal data often contain missing responses
+      and error-prone covariates,            relatively little work has been available
+      to simultaneously correct for the effects of response missingness            and
+      covariate measurement error on analysis of longitudinal data. Yi (2008) proposed
+      a simulation            based marginal method to adjust for the bias induced
+      by measurement error in covariates as well            as by missingness in response.
+      The proposed method focuses on modeling the marginal mean and            variance
+      structures, and the missing at random mechanism is assumed. Furthermore, the
+      distribution            of covariates are left unspecified. These features make
+      the proposed method applicable to a broad            settings. In this paper,
+      we develop an R package, called swgee, which implements the method            proposed
+      by Yi (2008). Moreover, our package includes additional implementation steps
+      which extend            the setting considered by Yi (2008). To describe the
+      use of the package and its main features, we report            simulation studies
+      and analyses of a data set arising from the Framingham Heart Study.'
+    acknowledged: '2018-07-31'
+    online: '2019-08-17'
+    CRANpkgs:
+    - gee
+    - yags
+    - wgeesel
+    - geepack
+    - mvtnorm
+    CTV_rev:
+    - SocialSciences
+    - Distributions
+    - Econometrics
+    - Finance
+    - Multivariate
+    suppl: 1.9 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
