for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -1315,6 +1315,31 @@ issues:
     - Multivariate
     suppl: 1.9 Kb
     landing: '2019'
+  - slug: RJ-2019-032
+    title: 'roahd Package: Robust Analysis of High Dimensional Data'
+    bibtitle: 'roahd Package: Robust Analysis of High Dimensional Data'
+    author:
+    - Francesca Ieva
+    - Anna Maria Paganoni
+    - Juan Romo
+    - Nicholas Tarabelloni
+    bibauthor: |-
+      Francesca Ieva and Anna Maria Paganoni and Juan Romo and
+                Nicholas Tarabelloni
+    abstract: ' Abstract The focus of this paper is on the open-source R package roahd
+      (RObust Analysis           of High dimensional Data), see Tarabelloni et al.
+      (2017). roahd has been developed to gather           recently proposed statistical
+      methods that deal with the robust inferential analysis of univariate           and
+      multivariate functional data. In particular, efficient methods for outlier detection
+      and related           graphical tools, methods to represent and simulate functional
+      data, as well as inferential tools for           testing differences and dependency
+      among families of curves will be discussed, and the associated           functions
+      of the package will be described in details.'
+    acknowledged: []
+    online: '2019-08-17'
+    CRANpkgs: R
+    suppl: 1.3 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
