for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -1340,6 +1340,83 @@ issues:
     CRANpkgs: R
     suppl: 1.3 Kb
     landing: '2019'
+  - slug: RJ-2019-033
+    title: The Landscape of R Packages for Automated Exploratory Data Analysis
+    bibtitle: |-
+      The Landscape of R Packages for Automated Exploratory Data
+                Analysis
+    author:
+    - Mateusz Staniak
+    - Przemysław Biecek
+    bibauthor: Mateusz Staniak and Przemysław Biecek
+    abstract: '  Abstract The increasing availability of large but noisy data sets
+      with a large number of heterogeneous            variables leads to the increasing
+      interest in the automation of common tasks for data analysis. The            most
+      time-consuming part of this process is the Exploratory Data Analysis, crucial
+      for better domain            understanding, data cleaning, data validation,
+      and feature engineering.                  There is a growing number of libraries
+      that attempt to automate some of the typical Exploratory            Data Analysis
+      tasks to make the search for new insights easier and faster. In this paper,
+      we present a            systematic review of existing tools for Automated Exploratory
+      Data Analysis (autoEDA). We explore            the features of fifteen popular
+      R packages to identify the parts of analysis that can be effectively            automated
+      with the current tools and to point out new directions for further autoEDA development.'
+    acknowledged: []
+    online: '2019-08-17'
+    CRANpkgs:
+    - cranlogs
+    - radiant
+    - visdat
+    - archivist
+    - xtable
+    - arsenal
+    - DataExplorer
+    - dataMaid
+    - dlookr
+    - ExPanDaR
+    - explore
+    - shiny
+    - exploreR
+    - funModeling
+    - inspectdf
+    - RtutoR
+    - SmartEDA
+    - data.table
+    - summarytools
+    - knitr
+    - ggplot2
+    - xray
+    - tableone
+    - describer
+    - skimr
+    - prettyR
+    - Hmisc
+    - ggfortify
+    - autoplotly
+    - gpairs
+    - GGally
+    - survminer
+    - cr17
+    - DALEX
+    - iml
+    CTV_rev:
+    - ReproducibleResearch
+    - MissingData
+    - TeachingStatistics
+    - WebTechnologies
+    - Bayesian
+    - ClinicalTrials
+    - Econometrics
+    - Finance
+    - Graphics
+    - HighPerformanceComputing
+    - Multivariate
+    - OfficialStatistics
+    - Phylogenetics
+    - SocialSciences
+    - Survival
+    suppl: 1.6 Kb
+    landing: '2019'
 - issue: 2009-1
   year: 2009
   volume: 1
