for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -386,9 +386,9 @@ issues:
                 R
     author:
     - Mengyang Gu
-    - Jesús Palomo
+    - Jesus Palomo
     - James O. Berger
-    bibauthor: Mengyang Gu and Jesús Palomo and James O. Berger
+    bibauthor: Mengyang Gu and Jesus Palomo and James O. Berger
     abstract: '  Abstract Gaussian stochastic process (GaSP) emulation is a powerful
       tool for approximating compu           tationally intensive computer models.
       However, estimation of parameters in the GaSP emulator is            a challenging
