for putting online

--- a/_config.yml
+++ b/_config.yml
@@ -295,7 +295,7 @@ issues:
     bibauthor: Diego Moretti and Luca Valentino and Tiziana Tuoto
     abstract: '  Abstract Record linkage aims at quickly and accurately identifying
       if two records represent the same            real world entity. In many applications,
-      we are interested in restricting the linkage results to “1 to 1”            links,
+      we are interested in restricting the linkage results to "1 to 1"            links,
       that is a single record does not appear more than once in the output. This can
       be dealt with the            transport algorithm. The optimization problem,
       however, grows quadratically in the size of the input,            quickly becoming
@@ -305,7 +305,7 @@ issues:
       the current implementation            in the toolkit RELAIS, specifically developed
       for record linkage problems. The results highlight            improvements beyond
       expectations. In fact the tested solutions allow successfully executing the
-      “1 to            1” reduction for large size datasets up to the largest sample
+      "1 to            1" reduction for large size datasets up to the largest sample
       surveys at National Statistical Institutes.'
     acknowledged: '2018-10-26'
     online: '2019-07-30'
@@ -316,6 +316,7 @@ issues:
     - intpoint
     - slam
     CTV_rev: Optimization
+    suppl: 180 bytes
     landing: '2019'
   - slug: RJ-2019-009
     title: 'mixedsde: A Package to Fit Mixed Stochastic Differential Equations'
